tests/PhiCore/compile_failure/src/Algorithm/StringLength.nullptr.fail.cpp
#include <Phi/Algorithm/StringLength.hpp>

int main()
{
    phi::usize l = phi::StringLength(nullptr);
}
